@@ -22,7 +22,6 @@ my $use_hard_links    = ''; # hardlinks do not work across fs boundaries
 my $postinst_hook     = '';          #Normally we do not
 my $minimal_swap      = '';          # Do not swap symlinks
 my $ignore_depmod_err = '';          # normally we do not
-my $ramdisk           = '';
 my $package_name      = "linux-image-$version";
 
 #known variables
@@ -68,7 +67,6 @@ if (-r "$CONF_LOC" && -f "$CONF_LOC"  ) {
       $image_dest      = "$1"  if /image_dest\s*=\s*(\S+)/i;
       $postinst_hook   = "$1"  if /postinst_hook\s*=\s*(\S+)/i;
       $mkimage         = "$1"  if /mkimage\s*=\s*(.+)$/i;
-      $ramdisk         = "$1"  if /ramdisk\s*=\s*(.+)$/i;
     }
     close CONF;
     $have_conffile = "Yes";
@@ -623,16 +621,6 @@ if (-d "$modules_base/$version") {
   &do_modules();
 }
 
-
-# Warn if we are ignoring the old ramdisk setting
-if ($ramdisk =~ /\S/) {
-    my ($question, $ret, $seen);
-    $question = "${package_name}/postinst/ignoring-ramdisk";
-    ($ret,$seen) = input('high', "$question");
-    die "Error setting debconf question $question: $seen" if $ret && $ret != 30;
-    ($ret,$seen) = go();
-    die "Error asking debconf question $question: $seen" if $ret && $ret != 30;
-}
 
 # Only change the symlinks if we are not being upgraded
 if (! defined $ARGV[1] || ! $ARGV[1] || $ARGV[1] =~ m/<unknown>/o) {
