@@ -16,6 +16,8 @@ linux (3.11~rc5-1~exp1) UNRELEASED; urgency=low
       environment
     - Use only one template syntax (@keyword@) and do all substitutions
       in gencontrol.py
+    - linux-image.postinst: Remove debconf warning about ramdisk variable in
+      /etc/kernel-img.conf
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 11 Aug 2013 19:34:47 +0200
 
